Implemented complete AuthN/AuthZ flow with DB and JWT

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,14 @@ CA_REGISTRAR_PASS=
 
 # 3. Password di default per i nuovi elettori
 DEFAULT_VOTER_PASS=
+
+
+# Segreti del Database 
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
+DB_PORT=
+
+# Segreto per firmare i JSON Web Token (JWT)
+JWT_SECRET=
