--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "fabric-ca-client": "^2.2.19",
-    "fabric-network": "^2.2.19"
+    "fabric-network": "^2.2.19",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3"
   }
 }
