--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,16 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "fabric-ca-client": "^2.2.19",
     "fabric-network": "^2.2.19",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "merkletreejs": "^0.6.0",
+    "pg": "^8.16.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^8.3.2"
   }
 }
